--- a/notebooks/setup_colab.ipynb
+++ b/notebooks/setup_colab.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -11,9 +13,20 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/borisbob91/CropHealth_Detection_PFE/blob/main/notebooks/setup_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -38,11 +51,10 @@
       "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 231
+          "base_uri": "https://localhost:8080/"
         },
         "id": "-jSaB-2BPjuA",
-        "outputId": "eef89aa8-f0c7-4b4c-ed1b-74212772f09f"
+        "outputId": "42eee234-9e7a-4a94-fa37-168820593797"
       },
       "outputs": [
         {
@@ -52,25 +64,12 @@
             "======================================================================\n",
             "🔧 CONFIGURATION GPU\n",
             "======================================================================\n",
-            "❌ Pas de GPU détecté !\n",
-            "💡 Activer GPU: Runtime > Change runtime type > GPU (T4)\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "SystemExit",
-          "evalue": "1",
-          "traceback": [
-            "An exception has occurred, use %tb to see the full traceback.\n",
-            "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/IPython/core/interactiveshell.py:3561: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-            "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+            "✅ GPU Disponible\n",
+            "   • Modèle: Tesla T4\n",
+            "   • Mémoire: 15.8 GB\n",
+            "   • CUDA Version: 12.6\n",
+            "   • PyTorch Version: 2.8.0+cu126\n",
+            "======================================================================\n"
           ]
         }
       ],
@@ -137,10 +136,64 @@
         "!ls -la"
       ],
       "metadata": {
-        "id": "pH40VSsYQQxJ"
+        "id": "pH40VSsYQQxJ",
+        "outputId": "e7284905-e750-4fc6-a991-7d64e8c535f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "======================================================================\n",
+            "📦 CLONAGE DU PROJET\n",
+            "======================================================================\n",
+            "\n",
+            "Cloning into 'CropHealth_Detection_PFE'...\n",
+            "remote: Enumerating objects: 83, done.\u001b[K\n",
+            "remote: Counting objects: 100% (83/83), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (68/68), done.\u001b[K\n",
+            "remote: Total 83 (delta 18), reused 73 (delta 12), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (83/83), 333.95 KiB | 1.83 MiB/s, done.\n",
+            "Resolving deltas: 100% (18/18), done.\n",
+            "/content/CropHealth_Detection_PFE\n",
+            "\n",
+            "✅ Projet cloné !\n",
+            "\n",
+            "📁 Structure du projet:\n",
+            "total 208\n",
+            "drwxr-xr-x 12 root root  4096 Nov 20 02:22 .\n",
+            "drwxr-xr-x  1 root root  4096 Nov 20 02:22 ..\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 configs\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 datasets\n",
+            "-rw-r--r--  1 root root 27173 Nov 20 02:22 evaluate_models.py\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 exports\n",
+            "drwxr-xr-x  8 root root  4096 Nov 20 02:22 .git\n",
+            "-rw-r--r--  1 root root    66 Nov 20 02:22 .gitattributes\n",
+            "-rw-r--r--  1 root root   181 Nov 20 02:22 .gitignore\n",
+            "drwxr-xr-x  3 root root  4096 Nov 20 02:22 .idea\n",
+            "-rw-r--r--  1 root root  1092 Nov 20 02:22 LICENSE\n",
+            "-rw-r--r--  1 root root 13419 Nov 20 02:22 model_predict.py\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 models\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 notebooks\n",
+            "-rw-r--r--  1 root root 13796 Nov 20 02:22 README.md\n",
+            "-rw-r--r--  1 root root  1343 Nov 20 02:22 requirements.txt\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 script\n",
+            "-rw-r--r--  1 root root  4723 Nov 20 02:22 setup_notebook.py\n",
+            "-rw-r--r--  1 root root  1227 Nov 20 02:22 starter.ipynb\n",
+            "-rw-r--r--  1 root root 47922 Nov 20 02:22 start.ipynb\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 trainers\n",
+            "-rw-r--r--  1 root root  8220 Nov 20 02:22 train.py\n",
+            "-rw-r--r--  1 root root  3194 Nov 20 02:22 train_yolo.py\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 02:22 utils\n",
+            "-rw-r--r--  1 root root  7331 Nov 20 02:22 yolo_predict.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -194,10 +247,41 @@
         "print(f\"   • Albumentations: {albumentations.__version__}\")"
       ],
       "metadata": {
-        "id": "mw4QdadbQbGo"
+        "id": "mw4QdadbQbGo",
+        "outputId": "a54ae8dc-78e0-48a7-f691-9ac254b91e37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "======================================================================\n",
+            "📦 INSTALLATION DES DÉPENDANCES\n",
+            "======================================================================\n",
+            "\n",
+            "⏳ Installation en cours (2-3 minutes)...\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m983.2/983.2 kB\u001b[0m \u001b[31m30.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m34.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.5/112.5 kB\u001b[0m \u001b[31m10.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\n",
+            "✅ Dépendances installées !\n",
+            "\n",
+            "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
+            "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
+            "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n",
+            "📋 Versions installées:\n",
+            "   • PyTorch: 2.8.0+cu126\n",
+            "   • TorchVision: 0.23.0+cu126\n",
+            "   • Ultralytics: 8.3.229\n",
+            "   • Albumentations: 2.0.8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -256,16 +340,15 @@
         "    print(\"📁 Utilisation du dataset depuis Google Drive...\")\n",
         "\n",
         "    # Adapter ce chemin selon votre structure Drive\n",
-        "    drive_dataset_path = \"/content/drive/MyDrive/CropHealth_Dataset\"\n",
+        "    drive_dataset_path = \"/content/drive/MyDrive/CropHealth\"\n",
         "\n",
         "    if Path(drive_dataset_path).exists():\n",
         "        # Créer lien symbolique\n",
-        "        !ln -sf {drive_dataset_path} data/pascal_voc\n",
+        "        !ln -sf {drive_dataset_path} data/pascal_voc_original\n",
         "        print(f\"✅ Dataset lié depuis: {drive_dataset_path}\")\n",
         "    else:\n",
         "        print(f\"❌ Dataset non trouvé dans Drive: {drive_dataset_path}\")\n",
         "        print(\"💡 Mettre use_drive=False pour upload manuel\")\n",
-        "\n",
         "else:\n",
         "    # Option B : Upload manuel\n",
         "    print(\"📤 Upload votre dataset ZIP (Pascal VOC format)...\")\n",
@@ -281,10 +364,39 @@
         "\n",
         "# Vérifier structure\n",
         "print(\"\\n📋 Vérification de la structure...\")\n",
-        "!tree data/pascal_voc -L 2 -d"
+        "!tree data/pascal_voc_orignal -L 2 -d"
       ],
       "metadata": {
         "id": "x9Ptq6qjQ3TF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# augmentation du dataset depuis pascal_voc"
+      ],
+      "metadata": {
+        "id": "_zKuo3QpFvmG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"🔄 Augmenation PASCAL VOC\")\n",
+        "print(\"=\"*70 + \"\\n\")\n",
+        "\n",
+        "# Convertir VOC → YOLO\n",
+        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/train -o data/pascal_voc/train -t train -b True\n",
+        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/val -o data/pascal_voc/val -t val -b True\n",
+        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/test -o data/pascal_voc/test -t val -b True\n",
+        "\n",
+        "print(\"\\n✅ Conversion YOLO terminée !\")"
+      ],
+      "metadata": {
+        "id": "LVj9WFX_F1GC"
       },
       "execution_count": null,
       "outputs": []
