--- a/notebooks/setup_colab.ipynb
+++ b/notebooks/setup_colab.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/borisbob91/CropHealth_Detection_PFE/blob/main/notebooks/setup_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -137,10 +126,10 @@
       ],
       "metadata": {
         "id": "pH40VSsYQQxJ",
-        "outputId": "e7284905-e750-4fc6-a991-7d64e8c535f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e7284905-e750-4fc6-a991-7d64e8c535f3"
       },
       "execution_count": 2,
       "outputs": [
@@ -248,10 +237,10 @@
       ],
       "metadata": {
         "id": "mw4QdadbQbGo",
-        "outputId": "a54ae8dc-78e0-48a7-f691-9ac254b91e37",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a54ae8dc-78e0-48a7-f691-9ac254b91e37"
       },
       "execution_count": 3,
       "outputs": [
@@ -337,10 +326,14 @@
         "use_drive = True  # Mettre False pour uploader manuellement\n",
         "\n",
         "if use_drive:\n",
+        "    from google.colab import drive\n",
+        "    drive.mount('/content/drive')\n",
+        "\n",
         "    print(\"📁 Utilisation du dataset depuis Google Drive...\")\n",
         "\n",
-        "    # Adapter ce chemin selon votre structure Drive\n",
+        "    # chemin selon votre structure Drive\n",
         "    drive_dataset_path = \"/content/drive/MyDrive/CropHealth\"\n",
+        "    !unzip \"/content/drive/MyDrive/CropHealth/pascal_voc_original.zip\" -d \"/content/drive/MyDrive/CropHealth/pascal_voc_original\"\n",
         "\n",
         "    if Path(drive_dataset_path).exists():\n",
         "        # Créer lien symbolique\n",
@@ -397,6 +390,35 @@
       ],
       "metadata": {
         "id": "LVj9WFX_F1GC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Visualiser les données augmenté"
+      ],
+      "metadata": {
+        "id": "mrAxMLSzRDwv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"🔄Visualisation apres Augmenation PASCAL VOC\")\n",
+        "print(\"=\"*70 + \"\\n\")\n",
+        "\n",
+        "!python /utils/pascal_viz.py -d data/pascal_voc/train -n 6\n",
+        "print(\"\\n✅ visualisation train terminée !\")\n",
+        "!python /utils/pascal_viz.py -d data/pascal_voc/val -n 6\n",
+        "print(\"\\n✅ visualisation train terminée !\")\n",
+        "!python /utils/pascal_viz.py -d data/pascal_voc/test -n 6\n",
+        "print(\"\\n✅ visualisation train terminée !\")"
+      ],
+      "metadata": {
+        "id": "lKDDzPfnRJeN"
       },
       "execution_count": null,
       "outputs": []
