--- a/notebooks/setup_colab.ipynb
+++ b/notebooks/setup_colab.ipynb
@@ -666,7 +666,7 @@
         "    train_imgs = Path(f'data/{format_name}/train')\n",
         "    if train_imgs.exists():\n",
         "        if format_name == 'pascal_voc':\n",
-        "            count = len(list((train_imgs / 'JPEGImages').glob('*.jpg')))\n",
+        "            count = len(list((train_imgs / 'images').glob('*.jpg')))\n",
         "        else:\n",
         "            count = len(list((train_imgs / 'images').glob('*.jpg')))\n",
         "\n",
