--- a/notebooks/setup_colab.ipynb
+++ b/notebooks/setup_colab.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/borisbob91/CropHealth_Detection_PFE/blob/main/notebooks/setup_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -96,10 +107,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "S9fV3v3Jm6RG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S9fV3v3Jm6RG",
+        "outputId": "8b42b7e2-6c69-4fe9-b1cc-c467f1348b95"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -143,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "82d62bab-f20a-4f56-db3c-76b2354737ad"
+        "outputId": "44ca1ce6-03d9-4591-b439-624d27bec076"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,44 +180,44 @@
             "======================================================================\n",
             "\n",
             "Cloning into 'CropHealth_Detection_PFE'...\n",
-            "remote: Enumerating objects: 104, done.\u001b[K\n",
-            "remote: Counting objects: 100% (104/104), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (82/82), done.\u001b[K\n",
-            "remote: Total 104 (delta 35), reused 79 (delta 19), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (104/104), 311.84 KiB | 11.99 MiB/s, done.\n",
-            "Resolving deltas: 100% (35/35), done.\n",
-            "/content/CropHealth_Detection_PFE/CropHealth_Detection_PFE/CropHealth_Detection_PFE\n",
-            "mkdir: cannot create directory ‘/content/CropHealth_Detection_PFE/data’: File exists\n",
+            "remote: Enumerating objects: 120, done.\u001b[K\n",
+            "remote: Counting objects: 100% (120/120), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (92/92), done.\u001b[K\n",
+            "remote: Total 120 (delta 46), reused 87 (delta 25), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (120/120), 333.85 KiB | 9.02 MiB/s, done.\n",
+            "Resolving deltas: 100% (46/46), done.\n",
+            "/content/CropHealth_Detection_PFE\n",
             "\n",
             "✅ Projet cloné !\n",
             "\n",
             "📁 Structure du projet:\n",
-            "total 208\n",
-            "drwxr-xr-x 12 root root  4096 Nov 20 05:49 .\n",
-            "drwxr-xr-x 13 root root  4096 Nov 20 05:49 ..\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 configs\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 datasets\n",
-            "-rw-r--r--  1 root root 27173 Nov 20 05:49 evaluate_models.py\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 exports\n",
-            "drwxr-xr-x  8 root root  4096 Nov 20 05:49 .git\n",
-            "-rw-r--r--  1 root root    66 Nov 20 05:49 .gitattributes\n",
-            "-rw-r--r--  1 root root   181 Nov 20 05:49 .gitignore\n",
-            "drwxr-xr-x  3 root root  4096 Nov 20 05:49 .idea\n",
-            "-rw-r--r--  1 root root  1092 Nov 20 05:49 LICENSE\n",
-            "-rw-r--r--  1 root root 13419 Nov 20 05:49 model_predict.py\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 models\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 notebooks\n",
-            "-rw-r--r--  1 root root 13796 Nov 20 05:49 README.md\n",
-            "-rw-r--r--  1 root root  1343 Nov 20 05:49 requirements.txt\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 script\n",
-            "-rw-r--r--  1 root root  4723 Nov 20 05:49 setup_notebook.py\n",
-            "-rw-r--r--  1 root root  1227 Nov 20 05:49 starter.ipynb\n",
-            "-rw-r--r--  1 root root 47922 Nov 20 05:49 start.ipynb\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 trainers\n",
-            "-rw-r--r--  1 root root  8220 Nov 20 05:49 train.py\n",
-            "-rw-r--r--  1 root root  3194 Nov 20 05:49 train_yolo.py\n",
-            "drwxr-xr-x  2 root root  4096 Nov 20 05:49 utils\n",
-            "-rw-r--r--  1 root root  7331 Nov 20 05:49 yolo_predict.py\n"
+            "total 212\n",
+            "drwxr-xr-x 13 root root  4096 Nov 20 14:13 .\n",
+            "drwxr-xr-x  1 root root  4096 Nov 20 14:13 ..\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 configs\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 data\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 datasets\n",
+            "-rw-r--r--  1 root root 27181 Nov 20 14:13 evaluate_models.py\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 exports\n",
+            "drwxr-xr-x  8 root root  4096 Nov 20 14:13 .git\n",
+            "-rw-r--r--  1 root root    66 Nov 20 14:13 .gitattributes\n",
+            "-rw-r--r--  1 root root   181 Nov 20 14:13 .gitignore\n",
+            "drwxr-xr-x  3 root root  4096 Nov 20 14:13 .idea\n",
+            "-rw-r--r--  1 root root  1092 Nov 20 14:13 LICENSE\n",
+            "-rw-r--r--  1 root root 13427 Nov 20 14:13 model_predict.py\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 models\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 notebooks\n",
+            "-rw-r--r--  1 root root 13796 Nov 20 14:13 README.md\n",
+            "-rw-r--r--  1 root root  1343 Nov 20 14:13 requirements.txt\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 script\n",
+            "-rw-r--r--  1 root root  4723 Nov 20 14:13 setup_notebook.py\n",
+            "-rw-r--r--  1 root root  1227 Nov 20 14:13 starter.ipynb\n",
+            "-rw-r--r--  1 root root 47922 Nov 20 14:13 start.ipynb\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 trainers\n",
+            "-rw-r--r--  1 root root  8230 Nov 20 14:13 train.py\n",
+            "-rw-r--r--  1 root root  3195 Nov 20 14:13 train_yolo.py\n",
+            "drwxr-xr-x  2 root root  4096 Nov 20 14:13 utils\n",
+            "-rw-r--r--  1 root root  7331 Nov 20 14:13 yolo_predict.py\n"
           ]
         }
       ]
@@ -255,9 +278,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7bed4181-964b-44f6-ccf0-1df15e57bf21"
+        "outputId": "0b657e2f-e239-46e5-af4c-508c5d694517"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,9 +292,9 @@
             "======================================================================\n",
             "\n",
             "⏳ Installation en cours (2-3 minutes)...\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m983.2/983.2 kB\u001b[0m \u001b[31m25.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m32.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.5/112.5 kB\u001b[0m \u001b[31m10.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m983.2/983.2 kB\u001b[0m \u001b[31m15.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m19.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.5/112.5 kB\u001b[0m \u001b[31m10.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\n",
             "✅ Dépendances installées !\n",
             "\n",
@@ -5432,12 +5455,12 @@
       ],
       "metadata": {
         "id": "EnRCR7wFyO6e",
-        "outputId": "3610df60-ef6b-4c66-cc96-cfd7456cbdcf",
+        "outputId": "91f2c153-2285-4f51-d076-f2dc4456a9a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -5458,10 +5481,25 @@
         "!ls -la {data_path}\n"
       ],
       "metadata": {
-        "id": "SrtcqxLc1RM6"
+        "id": "SrtcqxLc1RM6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3ec10e7a-e151-4609-d00f-7d87d244a3fc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 12\n",
+            "drwxr-xr-x  2 root root 4096 Nov 20 14:17 .\n",
+            "drwxr-xr-x 13 root root 4096 Nov 20 14:13 ..\n",
+            "lrwxrwxrwx  1 root root   73 Nov 20 14:17 pascal_voc_original -> /content/drive/MyDrive/CropHealth/pascal_voc_original/pascal_voc_original\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5480,17 +5518,96 @@
         "print(\"=\"*70 + \"\\n\")\n",
         "\n",
         "# Convertir VOC → YOLO\n",
-        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/train -o data/pascal_voc/train -t train -b True\n",
-        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/val -o data/pascal_voc/val -t val -b True\n",
-        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/test -o data/pascal_voc/test -t val -b True\n",
+        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/train -o data/pascal_voc/train -d train -b True\n",
+        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/val -o data/pascal_voc/val -d val -b True\n",
+        "!python script/augment_pascal_voc.py -i data/pascal_voc_original/test -o data/pascal_voc/test -d val -b True\n",
         "\n",
         "print(\"\\n✅ Conversion YOLO terminée !\")"
       ],
       "metadata": {
-        "id": "LVj9WFX_F1GC"
+        "id": "LVj9WFX_F1GC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c64a691-0160-40a9-f216-f8e934510431"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "======================================================================\n",
+            "🔄 Augmenation PASCAL VOC\n",
+            "======================================================================\n",
+            "\n",
+            "\n",
+            "============================================================\n",
+            "🔧 CONFIGURATION\n",
+            "============================================================\n",
+            "Input dir:      data/pascal_voc_original/train\n",
+            "Output dir:     data/pascal_voc/train\n",
+            "Dataset type:   train\n",
+            "Balance:        True\n",
+            "============================================================\n",
+            "\n",
+            "/content/CropHealth_Detection_PFE/script/augment_pascal_voc.py:75: UserWarning: Argument(s) 'mode' are not valid for transform Affine\n",
+            "  'transform': A.Compose([A.Affine(scale=0.80, p=1.0, mode=cv2.BORDER_CONSTANT)], bbox_params=bbox_params),\n",
+            "/content/CropHealth_Detection_PFE/script/augment_pascal_voc.py:79: UserWarning: Argument(s) 'mode' are not valid for transform Affine\n",
+            "  'transform': A.Compose([A.Affine(scale=1.5, p=1.0, mode=cv2.BORDER_CONSTANT)], bbox_params=bbox_params),\n",
+            "/usr/local/lib/python3.12/dist-packages/albumentations/core/composition.py:331: UserWarning: Got processor for bboxes, but no transform to process it.\n",
+            "  self._set_keys()\n",
+            "checking dataset type for balancing...\n",
+            "\n",
+            "============================================================\n",
+            "🚀 AUGMENTATION PASCAL VOC XML\n",
+            "============================================================\n",
+            "Dataset type: train\n",
+            "Balance classes: True\n",
+            "Images trouvées: 2806\n",
+            "Classes détectées: 21\n",
+            "Transformations disponibles: 18\n",
+            "\n",
+            "📊 RÉSULTATS (2806 fichiers traités)\n",
+            "==================================================\n",
+            "IMG_R_SD             :     442 objets ( 15.8%)\n",
+            "IMG_R_HA             :     331 objets ( 11.8%)\n",
+            "IMG_R_ES             :     292 objets ( 10.4%)\n",
+            "IMG_R_AG             :     238 objets (  8.5%)\n",
+            "IMG_P_CO             :     227 objets (  8.1%)\n",
+            "IMG_P_COL            :     217 objets (  7.7%)\n",
+            "IMG_R_SF             :     190 objets (  6.8%)\n",
+            "IMG_E_PH             :     166 objets (  5.9%)\n",
+            "IMG_R_JA             :     162 objets (  5.8%)\n",
+            "IMG_R_JAT            :     120 objets (  4.3%)\n",
+            "IMG_R_DS             :      88 objets (  3.1%)\n",
+            "IMG_N_SC             :      74 objets (  2.6%)\n",
+            "IMG_R_PG             :      53 objets (  1.9%)\n",
+            "IMG_R_GSP            :      46 objets (  1.6%)\n",
+            "IMG_R_AF             :      41 objets (  1.5%)\n",
+            "unknown              :      32 objets (  1.1%)\n",
+            "IMG_P_LS             :      28 objets (  1.0%)\n",
+            "IMG_R_BT             :      25 objets (  0.9%)\n",
+            "IMG_P_FN             :      16 objets (  0.6%)\n",
+            "IMG_R_PUO            :      10 objets (  0.4%)\n",
+            "IMG_E_AF             :       8 objets (  0.3%)\n",
+            "--------------------------------------------------\n",
+            "TOTAL                :    2806 objets\n",
+            "Fichiers            : 2806 fichiers\n",
+            "\n",
+            "\n",
+            "📊 Distribution des classes:\n",
+            "  🔴 LOW: 11 classes → 18 augmentations/image\n",
+            "  🔴 MEDIUM: 4 classes → 12 augmentations/image\n",
+            "  🔴 HIGH: 6 classes → 5 augmentations/image\n",
+            "\n",
+            "============================================================\n",
+            "\n",
+            "Augmentation:  15% 424/2806 [03:51<12:01,  3.30it/s]"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5783,6 +5900,24 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "bUug02fjpllb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#  Notebook 2 : Train Models\n",
+        "\n",
+        "CropHealth Detection - Entraînement des 5 modèles"
+      ],
+      "metadata": {
+        "id": "dn1b89b5cibS"
+      }
     }
   ]
 }
